--- a/AnperoFrontend/Views/Product/Index.cshtml
+++ b/AnperoFrontend/Views/Product/Index.cshtml
@@ -18,265 +18,7 @@
             <!-- row -->
             <div class="row">
                 <!-- Left colunm -->
-                <div class="column col-xs-12 col-sm-3" id="left_column">
-                    <!-- block category -->
-                    <div class="block left-module">
-                        <p class="title_block">Danh mục sản phẩm</p>
-                        <div class="block_content">
-                            <!-- layered -->
-                            <div class="layered layered-category">
-                                <div class="layered-content">
-                                    <ul class="tree-menu">                                      
-                                        <li><span></span><a href="#">T-shirts</a></li>
-                                        <li><span></span><a href="#">Dresses</a></li>
-                                        <li><span></span><a href="#">Jackets and coats </a></li>
-                                        <li><span></span><a href="#">Knitted</a></li>
-                                        <li><span></span><a href="#">Pants</a></li>
-                                        <li><span></span><a href="#">Bags & Shoes</a></li>
-                                        <li><span></span><a href="#">Best selling</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <!-- ./layered -->
-                        </div>
-                    </div>
-                    <!-- ./block category  -->
-                    <!-- block best sellers -->
-                    <div class="block left-module">
-                        <p class="title_block">Đang giảm giá</p>
-                        <div class="block_content product-onsale">
-                            <ul class="product-list owl-carousel" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-items="1" data-autoplay="true">
-                                <li>
-                                    <div class="product-container">
-                                        <div class="left-block">
-                                            <a href="#">
-                                                <img class="img-responsive" alt="product" src="assets/data/product-260x317.jpg" />
-                                            </a>
-                                            <div class="price-percent-reduction2">-30% OFF</div>
-                                        </div>
-                                        <div class="right-block">
-                                            <h5 class="product-name"><a href="#">@item.PrName</a></h5>
-
-                                            <div class="content_price">
-                                                <span class="price product-price">$38,95</span>
-                                                <span class="price old-price">$52,00</span>
-                                            </div>
-                                        </div>
-                                        <div class="product-bottom">
-                                            <a class="btn-add-cart" title="Add to Cart" href="#add">Add to Cart</a>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="product-container">
-                                        <div class="left-block">
-                                            <a href="#">
-                                                <img class="img-responsive" alt="product" src="assets/data/p35.jpg" />
-                                            </a>
-                                            <div class="price-percent-reduction2">-10% OFF</div>
-                                        </div>
-                                        <div class="right-block">
-                                            <h5 class="product-name"><a href="#">Maecenas consequat mauris</a></h5>
-                                            <div class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </div>
-                                            <div class="content_price">
-                                                <span class="price product-price">$38,95</span>
-                                                <span class="price old-price">$52,00</span>
-                                            </div>
-                                        </div>
-                                        <div class="product-bottom">
-                                            <a class="btn-add-cart" title="Add to Cart" href="#add">Add to Cart</a>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="product-container">
-                                        <div class="left-block">
-                                            <a href="#">
-                                                <img class="img-responsive" alt="product" src="assets/data/p37.jpg" />
-                                            </a>
-                                            <div class="price-percent-reduction2">-42% OFF</div>
-                                        </div>
-                                        <div class="right-block">
-                                            <h5 class="product-name"><a href="#">Maecenas consequat mauris</a></h5>
-                                            <div class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </div>
-                                            <div class="content_price">
-                                                <span class="price product-price">$38,95</span>
-                                                <span class="price old-price">$52,00</span>
-                                            </div>
-                                        </div>
-                                        <div class="product-bottom">
-                                            <a class="btn-add-cart" title="Add to Cart" href="#add">Add to Cart</a>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- ./block best sellers  -->
-                    <!-- block best sellers -->
-                    <div class="block left-module">
-                        <p class="title_block">Bán chạy</p>
-                        <div class="block_content">
-                            <div class="owl-carousel owl-best-sell" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplay="true" data-autoplayHoverPause="true" data-items="1">
-                                <ul class="products-block best-sell">
-                                    <li>
-                                        <div class="products-block-left">
-                                            <a href="@item.Images">
-                                                <img src="@item.Images" alt="@item.PrName">
-
-                                            </a>
-                                        </div>
-                                        <div class="products-block-right">
-                                            <p class="product-name">
-                                                <a href="#">Woman Within Plus Size Flared</a>
-                                            </p>
-                                            <p class="product-price">$38,95</p>
-                                            <p class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="products-block-left">
-                                            <a href="#">
-                                                <img src="assets/data/p11.jpg" alt="SPECIAL PRODUCTS">
-                                            </a>
-                                        </div>
-                                        <div class="products-block-right">
-                                            <p class="product-name">
-                                                <a href="#">Woman Within Plus Size Flared</a>
-                                            </p>
-                                            <p class="product-price">$38,95</p>
-                                            <p class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="products-block-left">
-                                            <a href="#">
-                                                <img src="assets/data/p12.jpg" alt="SPECIAL PRODUCTS">
-                                            </a>
-                                        </div>
-                                        <div class="products-block-right">
-                                            <p class="product-name">
-                                                <a href="#">Plus Size Rock Star Skirt</a>
-                                            </p>
-                                            <p class="product-price">$38,95</p>
-                                            <p class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </p>
-                                        </div>
-                                    </li>
-                                </ul>
-                                <ul class="products-block best-sell">
-                                    <li>
-                                        <div class="products-block-left">
-                                            <a href="#">
-                                                <img src="assets/data/p13.jpg" alt="SPECIAL PRODUCTS">
-                                            </a>
-                                        </div>
-                                        <div class="products-block-right">
-                                            <p class="product-name">
-                                                <a href="#">Woman Within Plus Size Flared</a>
-                                            </p>
-                                            <p class="product-price">$38,95</p>
-                                            <p class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="products-block-left">
-                                            <a href="#">
-                                                <img src="assets/data/p14.jpg" alt="SPECIAL PRODUCTS">
-                                            </a>
-                                        </div>
-                                        <div class="products-block-right">
-                                            <p class="product-name">
-                                                <a href="#">Woman Within Plus Size Flared</a>
-                                            </p>
-                                            <p class="product-price">$38,95</p>
-                                            <p class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </p>
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="products-block-left">
-                                            <a href="#">
-                                                <img src="assets/data/p15.jpg" alt="SPECIAL PRODUCTS">
-                                            </a>
-                                        </div>
-                                        <div class="products-block-right">
-                                            <p class="product-name">
-                                                <a href="#">Plus Size Rock Star Skirt</a>
-                                            </p>
-                                            <p class="product-price">$38,95</p>
-                                            <p class="product-star">
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star"></i>
-                                                <i class="fa fa-star-half-o"></i>
-                                            </p>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- ./block best sellers  -->
-                    <!-- left silide -->
-                    <div class="col-left-slide left-module">
-                        <ul class="owl-carousel owl-style2" data-loop="true" data-nav="false" data-margin="0" data-autoplayTimeout="1000" data-autoplayHoverPause="true" data-items="1" data-autoplay="true">
-                            <li><a href="#"><img src="assets/data/slide-left.jpg" alt="slide-left"></a></li>
-                            <li><a href="#"><img src="assets/data/slide-left2.jpg" alt="slide-left"></a></li>
-                            <li><a href="#"><img src="assets/data/slide-left3.png" alt="slide-left"></a></li>
-                        </ul>
-                    </div>
-                    <!--./left silde-->
-                   
-                    <!-- left silide -->
-                    <div class="col-left-slide left-module">
-                        <div class="banner-opacity">
-                            <a href="#"><img src="assets/data/ads-banner.jpg" alt="ads-banner"></a>
-                        </div>
-                    </div>
-                    <!--./left silde-->
-                </div>
+                @Html.Partial("product/_MenuAndAdsPartial")
                 <!-- ./left colunm -->
                 <!-- Center colunm-->
                 <div class="center_column col-xs-12 col-sm-9" id="center_column">
@@ -352,7 +94,17 @@
                                 </div>
                                 <div class="info-orther">
                                     <p>Mã Sản phẩm: #@item.Id</p>
-                                    <p>Trạng thái: <span class="in-stock">Còn hàng</span></p>
+                                    <p>
+                                        Trạng thái:
+                                        @if (item.IsInstock)
+                                        {
+                                            <span class="in-stock">Còn hàng</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="in-stock">Tạm hết hàng</span>
+                                        }
+                                    </p>
                                     <p>Tình trạng: mới</p>
                                     @if (item.Warranty > 0)
                                     {
@@ -367,7 +119,14 @@
                                 }
                                 <div class="form-action">
                                     <div class="button-group">
+                                        @if (item.IsInstock)
+                                        {
                                         <a class="btn-add-cart" href="#">Thêm vào giỏ hàng</a>
+                                        }
+                                        else
+                                        {
+                                        <a class="btn-add-cart" href="#">Tạm hết hàng</a>
+                                        }
                                     </div>
                                     <div class="button-group">
                                         <a target="_blank" class="wishlist" href="//www.facebook.com/sharer.php?u=@HttpContext.Current.Request.Url.AbsoluteUri">
@@ -443,7 +202,7 @@
                                         }
                                     }
                                 }
-                                                       
+
                             </ul>
                         </div>
                         <!-- ./box product -->
