--- a/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_Layout.cshtml
@@ -209,18 +209,17 @@
 
             <div id="introduce-box" class="row">
                 <div class="col-md-4">
-                    <div id="address-box">
-                        <a href="/"><img src="@commonInfo.Logo" alt="logo"></a>
-                        <div id="address-list">
-                            <div class="tit-name">Địa chỉ:</div>
-                            <div class="tit-contain">@commonInfo.Address</div>
-                            <div class="tit-name">Phone:</div>
-                            <div class="tit-contain">@commonInfo.HotLine</div>
+                    <div class="introduce-title">Các đại lý</div>
+                    <div class="address-box">
+
+                        @*<a href="/"><img src="@commonInfo.Logo" alt="logo"></a>*@
+                        <div class="adrct">
+                            <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address Công ty cổ phần Citygo số 434 trần khát Trân, Hai Bà </div>
+                            <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
 
                             @if (!string.IsNullOrEmpty(commonInfo.Email))
                             {
-                                <div class="tit-name">Email:</div>
-                                <div class="tit-contain">@commonInfo.Email</div>
+                                <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
                             }
 
                             @if (!string.IsNullOrEmpty(commonInfo.Skype))
@@ -230,8 +229,24 @@
                             }
 
                         </div>
-                        @if (!string.IsNullOrEmpty(commonInfo.Skype) || !string.IsNullOrEmpty(commonInfo.FaceBookLink))
-                        {
+
+                        <div  class="adrct">                            
+                            <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>                            
+                            <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
+
+                            @if (!string.IsNullOrEmpty(commonInfo.Email))
+                            {
+                                <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
+                            }
+
+                            @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                            {
+                                <div class="tit-name">Skype:</div>
+                                <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
+                            }
+
+                        </div>
+                         @{
                             string thisUrl = HttpContext.Current.Request.RawUrl;
                             <div class="introduce-title" style="margin-top:10px;">Chia sẻ với bạn bè</div>
                             <div class="social-link">
@@ -243,7 +258,6 @@
                                 {
                                     <a href="skype:@commonInfo.Skype?call"><i class="fa fa-skype"></i></a>
                                 }
-
                                 <a href="https://plus.google.com/share?url=@thisUrl" target="_blank"><i class="fa fa-google-plus"></i></a>
                                 <a href="http://pinterest.com/pinthis?url=@thisUrl" target="_blank"><i class="fa fa-pinterest-p"></i></a>
                                 <a href="http://www.twitter.com/share?url=@thisUrl" target="_blank"><i class="fa fa-twitter"></i></a>
@@ -252,16 +266,50 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="row">
+                    <div class="row">                        
                         <div class="col-sm-12">
-                            <div class="introduce-title">Các đại lý</div>
-                            @Html.Raw(commonInfo.Footer)
-                            <ul id="introduce-company" class="introduce-list">
-                                <li>About Us About Us  About Us About Us  About Us About Us  About Us About Us</li>
-                                <li>About Us About Us  About Us About Us  About Us About Us  About Us About Us</li>
-                                <li> About Us About Us  About Us About Us  About Us About Us  About Us About Us</li>
+                            <div class="address-box" style="margin-top: 31px;">
+
+                                @*<a href="/"><img src="@commonInfo.Logo" alt="logo"></a>*@
+                                <div class="adrct">
+                                    <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address Công ty cổ phần Citygo số 434 trần khát Trân, Hai Bà </div>
+                                    <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
+
+                                    @if (!string.IsNullOrEmpty(commonInfo.Email))
+                                    {
+                                        <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
+                                    }
+
+                                    @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                    {
+                                        <div class="tit-name">Skype:</div>
+                                        <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
+                                    }
+
+                                </div>
+
+                                <div class="adrct">
+                                    <div class="tit-contain"><i class="fa fa-home"></i> @commonInfo.Address</div>
+                                    <div class="tit-contain"><i class="fa fa-phone"></i> @commonInfo.HotLine</div>
+
+                                    @if (!string.IsNullOrEmpty(commonInfo.Email))
+                                    {
+                                        <div class="tit-contain"><i class="fa fa-envelope"></i> @commonInfo.Email</div>
+                                    }
+
+                                    @if (!string.IsNullOrEmpty(commonInfo.Skype))
+                                    {
+                                        <div class="tit-name">Skype:</div>
+                                        <div class="tit-contain"><a href="skype:@commonInfo.Skype?call"></a> @commonInfo.Skype</div>
+                                    }
+
+                                </div>
                                 
-                            </ul>
+                            </div>
+                            @*<div class="introduce-list">
+                                @Html.Raw(commonInfo.Footer)
+
+                            </div>*@
                             @*@if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
                             {
                                 <ul id="introduce-company" class="introduce-list">
@@ -275,8 +323,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                </div>
+                
                 <div class="col-md-4">
                     <div id="contact-box" style="text-align: right;">
                         @if (!string.IsNullOrEmpty(commonInfo.FaceBookLink))
