--- a/04_Shop_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
+++ b/04_Shop_multiProduct/Views/Shared/_partial/_HomeSlide_1.cshtml
@@ -1,6 +1,6 @@
 ﻿@using AnperoFrontend.WebService;
 <div class="row">
-        <div class="col-sm-12" style="padding-right: 0px;">
+        <div class="col-sm-12">
             <div class="homeslider">
                 @if (ViewData["slide"] != null)
                 {
