--- a/07_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/07_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -12,8 +12,8 @@
     <meta name="keywords" content="@ViewBag.Keywords" />
     <meta property="og:description" content="@commonInfo.Desc" />
     <meta property="og:title" content="@commonInfo.Name" />
-    <meta property="og:type" content="website" />   
-    <meta property="og:url" content="@HttpContext.Current.Request.Url.AbsoluteUri" />  
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="@HttpContext.Current.Request.Url.AbsoluteUri" />
     <meta property="og:image" content="@commonInfo.Logo" />
 }
 @section canonical{
@@ -23,7 +23,7 @@
     @if (!Request.Browser.IsMobileDevice)
     {
         @Html.Partial("_partial/_HomeSlide_1");
-      
+
     }
     <div class="container">
         <div class="row">
@@ -40,20 +40,19 @@
                     <div class="wp1">
                         <div class="imgct">
                             <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
-                            <h2>Kiến trúc</h2>
+                            <h2>Trang trí nội thất</h2>
 
                         </div>
-                        <p>Kiến trúc sư phác họa, tư vấn các vấn đề về kiến trúc (công năng, thẩm mỹ cũng như giải pháp kĩ thuật) cho các đối tượng khách hàng có nhu cầu xây dựng ở các lĩnh vực khác nhau.</p>
+                        <p>Thiết kế nội thất 3D. xác định không gian và trình bày một cách trực quan. chỉ định chất liệu và sản phẩm được dùng để tạo ra không gian, việc kết hợp màu sắc, độ sáng, chất liệu và các nhân tố khác.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="wp1">
                         <div class="imgct">
                             <a href="/"><img src="http://wonder.vn/wp-content/uploads/2015/12/w-12-300x212.jpg"></a>
-                            <h2>Kiến trúc</h2>
-
+                            <h2>Xây dựng</h2>
                         </div>
-                        <p>Kiến trúc sư phác họa, tư vấn các vấn đề về kiến trúc (công năng, thẩm mỹ cũng như giải pháp kĩ thuật) cho các đối tượng khách hàng có nhu cầu xây dựng ở các lĩnh vực khác nhau.</p>
+                        <p>Hoạt động xây dựng bao gồm lập quy hoạch, dự án đầu tư công trình, khảo sát, thiết kế xây dựng, thi công, giám sát, quản lý dự án đầu tư, lựa chọn nhà thầu và các hoạt động khác có liên quan đến xây dựng.</p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -68,7 +67,13 @@
                 </div>
 
             </section>
-
+        </div>
+        <div class="tct2">
+            <ul class="tabs-list">
+                <li class="tab vc_active"><a href="#"><i class="fa fa-shopping-cart"></i><span class="title-text">Bảng giá</span></a></li>
+                <li class="tta-tab"><a href="#"><i class="tta-icon fa fa-shopping-cart"></i><span class="title-text">Shop</span></a></li>
+                <li class="tta-tab"><a href="#"><i class="tta-icon fa fa-newspaper-o"></i><span class="title-text">Blog</span></a></li>
+            </ul>
 
         </div>
         <div class="top-cate">
@@ -81,13 +86,13 @@
                         <div id="top-categories" class="product-flexslider hidden-buttons">
                             <div class="slider-items slider-width-col4 products-grid">
                                 @if (commonInfo.ProductCategoryList != null && commonInfo.ProductCategoryList.Length > 0)
-                            {
-                                foreach (var item in commonInfo.ProductCategoryList)
                                 {
-                                    if (item.ChildCategory != null && item.ChildCategory.Length > 0)
+                                    foreach (var item in commonInfo.ProductCategoryList)
                                     {
-                                        foreach (var childItem in item.ChildCategory)
+                                        if (item.ChildCategory != null && item.ChildCategory.Length > 0)
                                         {
+                                            foreach (var childItem in item.ChildCategory)
+                                            {
                                                 <div class="item">
                                                     <div class="pro-img">
                                                         <a href="@Anpero.StringHelpper.GetCategoryLink(childItem.Name, childItem.Id)">
@@ -96,10 +101,10 @@
                                                         </a>
                                                     </div>
                                                 </div>
+                                            }
                                         }
                                     }
                                 }
-                            }
                             </div>
                         </div>
                     </div>
@@ -133,8 +138,8 @@
         </div>
     </div>
 
-    
-    
+
+
     <section class="wow bounceInUp animated">
         <div class="best-pro slider-items-products container">
             <div class="new_title">
@@ -173,7 +178,7 @@
                                                             <a class="button detail-bnt" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
                                                                 <span>Chi tiết</span>
                                                             </a>
-                                                        </div>                                                       
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -183,7 +188,7 @@
                                                 <div class="item-title">
                                                     <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">
                                                         @item.PrName
-                                                    </a> 
+                                                    </a>
                                                 </div>
                                                 <div class="item-content">
                                                     <div class="rating">
@@ -197,7 +202,7 @@
                                                     <div class="item-price">
                                                         <div class="price-box"><span class="regular-price"><span class="price">@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price) đ</span> </span> </div>
                                                     </div>
-                                                    <div class="add_cart">                                                        
+                                                    <div class="add_cart">
                                                         <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua ngay</span></button>
                                                     </div>
                                                 </div>
@@ -216,10 +221,10 @@
     @if (ViewData["FeatureArticle"] != null)
     {
         SearchArticleResults FeatureArticle = (SearchArticleResults)ViewData["FeatureArticle"];
-        <div class="latest-blog wow bounceInUp animated animated container">        
+        <div class="latest-blog wow bounceInUp animated animated container">
             <div class="new_title">
                 <h2>Bài viết mới nhất</h2>
-            </div>   
+            </div>
             @foreach (BlogItem item in FeatureArticle.ItemList)
             {
                 <div class="col-lg-4 col-md-4 col-xs-12 col-sm-4 blog-post">
@@ -233,7 +238,7 @@
                                 <time class="entry-date" datetime="@item.CreateDate">mới đăng</time>
                             </div>
                             <h3><a href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">@item.Title</a></h3>
-                            <p>@Anpero.StringHelpper.SubString(150,item.ShotDesc)</p>
+                            <p>@Anpero.StringHelpper.SubString(150, item.ShotDesc)</p>
                             <a class="readmore" href="@Anpero.StringHelpper.GetArticleLink(item.Title,item.Id)">Xem thêm</a>
                         </div>
                     </div>
@@ -241,5 +246,5 @@
             }
         </div>
     }
-   
+
 </div>
